# OpenNutriTracker

./: .env.example  .gitignore  CLAUDE.md  GettingStarted.md  README.md  justfile  pubspec.yaml
.github/workflows/: default_workflow.yml  deploy-site.yml  update-release-fingerprint.yml
android/fastlane/: Fastfile
backend/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/database/: __init__.py  manager.py
backend/app/models/: __init__.py
backend/app/prompts/: __init__.py  meal_text.py
backend/app/routers/: __init__.py  analyze.py  dependencies.py  health.py
backend/app/schemas/: __init__.py  analysis.py  error.py  health.py
backend/app/security/: __init__.py  access.py  rate_limit.py
backend/app/services/: __init__.py  errors.py  meal_analysis.py
backend/app/utils/: errors.py  logging.py  request_id.py
backend/tests/: conftest.py  test_analyze_text.py  test_config.py  test_health.py  test_meal_analysis_service.py  test_security.py
docs/: ai_implementation_status.md  ai_plan.md  supabase-fdc-self-hosting.md  supabase-self-hosting.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Fastfile
lib/: hive_registrar.g.dart  main.dart
lib/l10n/: intl_cs.arb  intl_cz.arb  intl_de.arb  intl_en.arb  intl_it.arb  intl_pl.arb  intl_sk.arb  intl_tr.arb  intl_uk.arb  intl_zh.arb
test/helpers/: fake_hive_db_provider.dart
test/unit_test/: atwater_consistency_test.dart  body_weight_format_test.dart  custom_meal_data_source_test.dart  (+26 more)
(+225 files in other folders)
