[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "opennutritracker-ai-backend"
version = "0.1.0"
description = "Privacy-first AI service for OpenNutriTracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite==0.21.0",
  "fastapi==0.139.2",
  "openai==2.46.0",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.20",
  "sqlalchemy[asyncio]==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.14.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
